--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "topologic-interview",
+  "name": "graphics-interview",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.3",
+    "@react-three/drei": "^9.108.3",
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/postprocessing": "^2.16.2",
+    "@types/three": "^0.166.0",
+    "fs": "^0.0.1-security",
+    "glsl-loader": "^0.0.1",
+    "leva": "^0.9.35",
+    "next": "14.2.3",
+    "perlin.js": "^1.0.0",
+    "raw-loader": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-draggable": "^4.4.6",
+    "react-p5": "^1.4.1",
+    "react-use-gesture": "^9.1.3",
+    "three": "^0.166.1",
+    "twgl.js": "^5.5.4",
+    "wasm-loader": "^1.3.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "typescript": "^5"
   }
 }
